Upgraded to latest @angular/cli, Few UI changes

--- a/src/app/views/speedtest/speedtest.component.html
+++ b/src/app/views/speedtest/speedtest.component.html
@@ -4,7 +4,7 @@
     <div class="card-body">
       <div class="row">
         <div class="col-sm-5">
-          <h4 class="card-title mb-0">Traffic History</h4>
+          <h4 class="card-title mb-0">Speedtest History</h4>
           <div class="small text-muted">November 2015</div>
         </div><!--/.col-->
         <div class="col-sm-7 d-none d-md-block">
