--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -18,8 +18,26 @@
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item d-md-down-none">
-      <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
+    <li class="nav-item d-md-down-none dropdown" dropdown placement="bottom right">
+      <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
+          <i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
+          <div class="dropdown-header text-center"><strong>You have 5 notifications</strong></div>
+          <a class="dropdown-item" href="#">
+              <i class="icon-user-follow text-success"></i> New user registered
+          </a>
+          <a class="dropdown-item" href="#">
+              <i class="icon-user-follow text-success"></i> New user registered
+          </a>
+          <a class="dropdown-item" href="#">
+            <div class="text-uppercase mb-1"><small><b>CPU Usage</b></small></div>
+            <span class="progress progress-xs">
+              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" class="progress-bar bg-info" role="progressbar" style="width: 25%"></div>
+            </span>
+            <small class="text-muted">348 Processes. 1/4 Cores.</small>
+          </a>
+        </div>
     </li>
 
     <li class="nav-item dropdown" dropdown placement="bottom right">
