--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -11,10 +11,10 @@
           <a class="nav-link" href="#">Dashboard</a>
         </li>    
     <li class="nav-item px-3">
-      <a class="nav-link" href="#/speedtest">Speedtest</a>
+      <a class="nav-link" [routerLink]="['/speedtest']" >Speedtest</a>
     </li>
     <li class="nav-item px-3">
-      <a class="nav-link" href="#settings">Settings</a>
+      <a class="nav-link" [routerLink]="['/settings']" >Settings</a>
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
