--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,4 +1,4 @@
 <footer class="app-footer">
-  <span><a href="http://coreui.io">CoreUI</a> &copy; 2017 creativeLabs.</span>
+  <span><a href="https://github.com/arevindh/MeepMeep_CoreUI">Meep-Meep WebUI</a> &copy; 2017 MeepMeep.</span>
   <span class="ml-auto">Powered by <a href="http://coreui.io">CoreUI</a></span>
 </footer>
